iptables-export
# Generated by iptables-save v1.6.0 on Thu Nov  9 15:52:53 2017
*nat
:PREROUTING ACCEPT [116:7924]
:INPUT ACCEPT [2:100]
:OUTPUT ACCEPT [3:478]
:POSTROUTING ACCEPT [12:1018]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.20.0.0/16 ! -o br-9e157ffa9765 -j MASQUERADE
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.20.128.6/32 -d 172.20.128.6/32 -p tcp -m tcp --dport 5984 -j MASQUERADE
-A POSTROUTING -s 172.20.128.4/32 -d 172.20.128.4/32 -p tcp -m tcp --dport 7053 -j MASQUERADE
-A POSTROUTING -s 172.20.128.4/32 -d 172.20.128.4/32 -p tcp -m tcp --dport 7051 -j MASQUERADE
-A DOCKER -i br-9e157ffa9765 -j RETURN
-A DOCKER -i docker0 -j RETURN
-A DOCKER ! -i br-9e157ffa9765 -p tcp -m tcp --dport 5984 -j DNAT --to-destination 172.20.128.6:5984
-A DOCKER ! -i br-9e157ffa9765 -p tcp -m tcp --dport 7053 -j DNAT --to-destination 172.20.128.4:7053
-A DOCKER ! -i br-9e157ffa9765 -p tcp -m tcp --dport 7051 -j DNAT --to-destination 172.20.128.4:7051
COMMIT
# Completed on Thu Nov  9 15:52:53 2017
# Generated by iptables-save v1.6.0 on Thu Nov  9 15:52:53 2017
*filter
:INPUT ACCEPT [313:21234]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [219:157256]
:DOCKER - [0:0]
:DOCKER-ISOLATION - [0:0]
:DOCKER-USER - [0:0]
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION
-A FORWARD -o br-9e157ffa9765 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-9e157ffa9765 -j DOCKER
-A FORWARD -i br-9e157ffa9765 ! -o br-9e157ffa9765 -j ACCEPT
-A FORWARD -i br-9e157ffa9765 -o br-9e157ffa9765 -j ACCEPT
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A DOCKER -d 172.20.128.6/32 ! -i br-9e157ffa9765 -o br-9e157ffa9765 -p tcp -m tcp --dport 5984 -j ACCEPT
-A DOCKER -d 172.20.128.4/32 ! -i br-9e157ffa9765 -o br-9e157ffa9765 -p tcp -m tcp --dport 7053 -j ACCEPT
-A DOCKER -d 172.20.128.4/32 ! -i br-9e157ffa9765 -o br-9e157ffa9765 -p tcp -m tcp --dport 7051 -j ACCEPT
-A DOCKER-ISOLATION -i docker0 -o br-9e157ffa9765 -j DROP
-A DOCKER-ISOLATION -i br-9e157ffa9765 -o docker0 -j DROP
-A DOCKER-ISOLATION -j RETURN
-A DOCKER-USER -j RETURN
COMMIT
# Completed on Thu Nov  9 15:52:53 2017
